--- a/d3_examples/style_sheets/appearance.css
+++ b/d3_examples/style_sheets/appearance.css
@@ -32,11 +32,13 @@
   top: 2%;
   left: 79%;
   margin-bottom: 8%;
+  height: 10%;
 }
 #Parameter_Settings {
   top: 2%;
   left: 80%;
   margin-bottom: 8%;
+  height: 35%;
 }
 #Rotation {
   top: 29%;
@@ -45,7 +47,7 @@
 #Basin_Highlighting {
   position: fixed;
   right: 0;
-  bottom: 6%;
+  bottom: 4%;
   width: 22%;
   height: 25%;
 }
@@ -86,8 +88,8 @@
   margin-bottom: 0%;
 }
 .simulation_text {
-  margin-top: 3%;
-  margin-bottom: 0%;
+  margin-top: 4%;
+  margin-bottom: 1%;
   display: inline-block;
   text-align: center;
   width: 49%;
